# tramli

./: .gitignore  .mcp.json  CHANGELOG.md  GEMINI.md  README-ja.md  README.md  package-lock.json  package.json  pom.xml
.claude/: .dre-manifest  settings.json
.dre/: context.json  notifications.json  pending-decisions.json  state-machine.yaml
dge/: README.md  UMBRELLA.md
docs/: api-cookbook-ja.md  api-cookbook.md  api-stability.md  article-build-time-dataflow.md  async-integration.md  backlog.md  example-oidc-auth-flow-ja.md  example-oidc-auth-flow.md  language-compatibility-matrix.md  language-guide-ja.md  language-guide.md  paper-tramli-constrained-flow-engine.md  plugin-guide-ja.md  plugin-guide.md  proposal-cross-language-portability.md  request-flowinstance-version-api.md  review-volta-gateway-ja.md  review-volta-gateway.md  session-handoff-2026-04-09-r2.md  session-handoff-2026-04-09-r3.md  session-handoff-2026-04-09-r4.md  session-handoff-2026-04-09-r5.md  session-handoff-2026-04-09-r6.md  session-handoff-2026-04-09.md  tramli_plugin_handoff.md  tutorial-plugins-ja.md  (+3 more)
lang/rust-plugins/: Cargo.toml
lang/rust-plugins/src/audit/: mod.rs
lang/rust-plugins/src/diagram/: mod.rs
lang/rust-plugins/src/docs/: mod.rs
lang/rust-plugins/src/hierarchy/: mod.rs
lang/rust-plugins/src/observability/: mod.rs
lang/rust-plugins/src/resume/: mod.rs
rust/: Cargo.toml  README.md
rust/src/: clone_any.rs  context.rs  data_flow_graph.rs  definition.rs  engine.rs  error.rs  instance.rs  lib.rs  mermaid.rs  store.rs  types.rs
rust/tests/: minimal.rs  order_flow.rs
(+443 files in other folders)
