[package]
name = "tramli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "Constrained flow engine — state machines that prevent invalid transitions at build time"
license = "MIT"
repository = "https://github.com/opaopa6969/tramli-rust"
keywords = ["state-machine", "workflow", "flow-engine", "validation"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
