[package]
name = "tramli"
version = "1.9.0"
edition = "2021"
rust-version = "1.75.0"
description = "Constrained flow engine — state machines that prevent invalid transitions at build time"
license = "MIT"
repository = "https://github.com/opaopa6969/tramli"
keywords = ["state-machine", "workflow", "flow-engine", "validation"]
categories = ["data-structures", "rust-patterns"]
readme = "README.md"

[dependencies]
