[package]
name = "tramli-plugins"
version = "3.6.1"
edition = "2021"
rust-version = "1.75.0"
description = "Plugin pack for tramli — audit, eventstore, observability, resume, idempotency, hierarchy, diagram, docs, lint, testing, subflow"
license = "MIT"
repository = "https://github.com/opaopa6969/tramli"
keywords = ["state-machine", "workflow", "plugins", "flow-engine"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
tramli = { version = "3.6.1", path = "../rust" }

[lints.clippy]
result_large_err = "allow"
type_complexity = "allow"
too_many_arguments = "allow"

